# makima

./: Cargo.toml  Dockerfile  README.md  compose.yml
.github/workflows/: deploy.yml
examples/: check.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.svelte
frontend/src/lib/: Header.svelte  Key.svelte  lazy.ts  redirect.ts  store.ts
src/: main.rs  message_handler.rs  notify.rs  rss.rs  setup.rs  store.rs  torrent.rs
