[package]
name = "makima"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
logging = "0.1.0"
reqwest = "0.12.4"
rss = { version = "2.0.7", features = ["with-serde"]}
serde = { version = "1.0.200", features = ["derive"] }
serenity = { version = "0.12.1", features = ["model"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
log = "0.4.21"
regex = "1.10.4"
bincode = "1.3.3"
plain_path = "0.1.0"
simple_logger = "5.0.0"
